public/css/app.css
/* Artfully masterminded by ZURB  */

/* -------------------------------------------------- 
   Table of Contents
-----------------------------------------------------
:: Shared Styles
:: Page Name 1
:: Page Name 2
*/


/* -----------------------------------------
   Shared Styles
----------------------------------------- */

@font-face {
    font-family: 'LeagueGothicRegular';
    src: url('../types/League_Gothic-webfont.eot');
    src: url('../types/League_Gothic-webfont.eot') format('embedded-opentype'),
    url('../types/League_Gothic-webfont.woff') format('woff'),
    url('../types/OpenSans-Regular.ttf') format('truetype'),
    url('../types/League_Gothic-webfont.svg#LeagueGothicRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {

    font-family: Helvetica, Arial, sans-serif;

}

a:link, a:visited {
    color: #0066CC;
    text-decoration: none;
}
a.button {
    color: white;
}

.primary-1 { background-color: #0E53A7 }
.primary-2 { background-color: #21518B }
.primary-3 { background-color: #073E80 }
.primary-4 { background-color: #2E72C4 }
.primary-5 { background-color: #457FC4 }

.complement-1 { background-color: #FF9C00 }
.complement-2 { background-color: #D59023 }
.complement-3 { background-color: #C47800 }
.complement-4 { background-color: #FFAC2A }
.complement-5 { background-color: #FFB94C }


h1 {
    font: 2.5em 'LeagueGothicRegular', Arial, sans-serif;
    color: #073E80;
    text-transform: uppercase;
}

h2 {
    font-size: 1.4em;
}

#banner {
    background: #073E80;
    margin-bottom: 1.25em;
    border-bottom: 1em solid #D9E6F0;
    line-height: 1em;

}

#banner .row {
    background: url("../images/tick.svg") no-repeat right;
    background-size: auto 100%;
}

#banner a {
    padding: 8px 10px 7px 10px;
}

#banner img {
    height: 50px;
}

@media only screen and (min-width: 48em) {
    #banner img {
        height: 80px;
    }
}

#banner .row {
    height: 100px;
    position: relative;
}

#banner h1 {
    color: #ffffff;
}

#nav {
    position: absolute;
    bottom: 1em;
    right: 1em;
    margin-bottom: 0;
    font-size: 1em;
    line-height: 1em;
}

#nav li {
    list-style-type: none;
    display: inline;
    color: white;
    margin-left: 1.5em;
    /*text-shadow: 0 0 4px black;*/
}

#nav a:link,
#nav a:visited {
    color: white;
}

#nav a:hover {
    text-decoration: underline;
}

#slide {
    margin-bottom: 2em;
}

#first h1 {
    padding-left: 0.45em;
}
#first p {
    font-size: 1.2em;
    color: #888;
}
#first .button {
    font-size: 1.2em;
    width: 100%;
}

#features ul li {
    list-style-type: none;
    list-style-position: inside;
}
#features ul li:before {
    content: "✔";
    margin-right: 0.5em;
    color: green;
}

.pricing-table .bullet-item:after {
    content: "✔";
    margin-left: 0.5em;
    color: green;
}

.action {
    color:red;
}


button,
.button {
    background: #F97F2D;
/*    background: -moz-linear-gradient(top, #EDB556 0%, #C47903 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#EDB556), color-stop(100%,#C47903));
    background: -webkit-linear-gradient(top, #EDB556 0%,#C47903 100%);
    background: -o-linear-gradient(top, #EDB556 0%,#C47903 100%);
    background: -ms-linear-gradient(top, #EDB556 0%,#C47903 100%);
    background: linear-gradient(to bottom, #EDB556 0%,#C47903 100%);*/
    border-color: #C47800;
    text-shadow: 1px 1px 0 rgba(0,0,0,0.6);
    border-radius: 1px;
}

button:hover, .button:hover, button:focus, .button:hover{
    background: #FFAD21;
}

.orbit-bullets {
    display: block;
    width: 8em;
    margin: 1em auto 0 auto;
}

.orbit-bullets li {
    background-color: #D9E6F0;
    border-color: black;
    border-width: 1px;
    margin-left: 0.5em;
}
.orbit-bullets li.active {
    background-color: #457FC4;
}

.orbit-container .orbit-slide-number {
    right: 10px;
    bottom: 15px;
    top: auto;
    left: auto;
}

.orbit-container {
/*    //border: 1px solid rgba(0,0,0,0.6);
    border-radius: 2px;*/
}


.orbit-container .orbit-prev,
.orbit-container .orbit-next,
.orbit-container .orbit-progress {
    opacity: 0;
    -moz-transition: opacity 0.3s;
    -webkit-transition: opacity 0.3s;
    -o-transition: opacity 0.3s;
    transition: opacity 0.3s;

}

.orbit-container .orbit-prev,
.orbit-container .orbit-next {
    width: 60px;
    background: transparent;

}


.orbit-container .orbit-prev span,
.orbit-container .orbit-next span {
    border: inset 30px;
    margin-top: -30px;
}

.orbit-container .orbit-next>span {
    border-color: transparent;
    border-left-style: solid;
    border-left-color: rgba(0,0,0,0.6);
    left: auto;
    margin-left: auto;
}

.orbit-container .orbit-prev>span {
    border-right-style: solid;
    border-color: transparent;
    border-right-color: rgba(0,0,0,0.6);
}

.orbit-container .orbit-next:hover>span {
    border-left-color: black;
}
.orbit-container .orbit-prev:hover>span {
    border-right-color: black;
}

.orbit-container:hover .orbit-prev,
.orbit-container:hover .orbit-next,
.orbit-container:hover .orbit-progress {
    opacity: 1;
}

#footer {
    background: #073E80;
    /*margin-top: 2em;*/
    border-top: 0.5em solid #D9E6F0;
}

#footer p {
    margin: 1em 0;
    text-align: center;
    color: white;
    font-size: 0.9em;
}
#footer abbr {
    color: white;
}
#footer a {
    text-decoration: underline;
    color: white;
}

/* -----------------------------------------
   Page Name 1
----------------------------------------- */

#faq-toc ol {
    list-style-position: inside;
}
#faq h2:target {
    color: #F97F2D;
    /*text-shadow: 1px 1px #D59023;*/
}

hr {
    margin-bottom: 2em;
}

hr:before {
    content: "";
    display: block;
    position: relative;
    height: 28px;
    width: 46px;
    margin-left: 48%;
    top: -14px;
    background: url("../images/ruler.png")
}


/* -----------------------------------------
   Page Name 2
----------------------------------------- */

#login button,
#login p:last-child,
#login form {
    margin-bottom: 0;
}

#login label {
    display: none;
}

/* -----------------------------------------
   login-register
----------------------------------------- */

.login-register button {
    width: 100%;
    margin-bottom: 0;
}

.login-register p:last-child {
    margin-bottom: 1em;
}

fieldset legend {
    font: 2.5em 'LeagueGothicRegular', Arial, sans-serif;
    color: #073E80;
    text-transform: uppercase;
}

:focus, a:focus {
    outline: 3px solid orange;
}

.message.error {
    background: #FA481C;
    border: none;
    font-weight: bold;
    font-size: 0.875em;
    color: #fff;
}

.message.error .close {
    color: #fff;
}


select {
    height: 2.3125em;
}

.newJob button {
    margin-bottom: 0;
}

.newJob fieldset,
.login-register fieldset {
    margin-top: 0.5em;
}

.newJob .large-2 {
    width: 18.75%;
}

.newJob .pricing-table .title {
    padding: 0;
}
.newJob .pricing-table .price {
    font-size: 1em;
}

.newJob .pricing-table {
    margin-bottom: 0.5em;
}

.newJob .pricing-table input {
    margin: 0;
    position: absolute;
    top: 1.45em;
    left: 1.65em;
}
.newJob .pricing-table label {
    padding: 1em 0.5em;
    color: #333;
    font-weight: bold;
    font-size: 1em;
    margin: 0;
}

.vats {
    font-size: 0.75em;
    font-style: italic;
}

.screenshot {
    width: 803px;
    padding: 1em 0;
}

.caption {
    position: absolute;
    bottom: 0;
    background-color: #000;
    background-color: rgba(0,0,0,0.6);
    color: #fff;
    width: 803px;
    padding: 10px 14px;
    font-size: 0.875em;
}

fieldset > .row > .small-3 {
    padding-right: 0;
}

.topLabel {
    margin-bottom: 1em;
    font-size: 0.875em;
}

.alert-box.info {
   color: #073E80;
   background: #D9E6F0;
}

.globalMessages .alert-box {
    border: none;
    padding: 1.25em;
}

#nav form {
    display: inline;
}

#nav .logout:hover {
    background: transparent;
}
#nav .logout {
    margin: 0;
    padding: 0;
    background: transparent;
    border: none;
    box-shadow: none;
}

#nav li > span {
    padding: 8px 10px 7px 10px;
}

